--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.2",
-    "i18next": "^25.6.0",
-    "lucide-react": "^0.548.0",
+    
+    
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.2.3",
@@ -43,5 +43,8 @@
   },
   "engines": {
     "node": "18.x"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.5"
   }
 }
